personajesstyle.css
.infop{
    min-height: 600px;
    margin-top: 1%;
    margin-bottom: 2%;
}

.infop h1{
    font-size: 28px;
    padding-left: 2%;
	padding-right: 2%; 
    margin-top: 0px;
}

.infop img{
    margin-left: 5%;
    margin-right: 2%;
    margin-bottom: 1%;
    height: 500px;
    object-fit: contain;
    max-height: 30vw;
    float: left;
    background-color: rgba(240, 240, 240, 0.7);
    box-shadow: 0px 0px 0.5vw 0.5vw rgba(0, 0, 0, 0.4);
    //border: 5px solid #0A0A0A;
    border-radius: 1vw;
    //align-content: center;
    padding-left: auto;
    padding-right: auto;
    display: block;
}

#InfoRudeus h1{
    color: #fff;
    text-shadow: 0 0 5px #F8B600, 0 0 5px #F8B600, 0 0 5px #F8B600, 0 0 7px #F8B600;
}

#Rudy1{
    padding-bottom: 1%;
    padding-top: 1%;
}

#Rudy2{
    float: right;
}

